# impl_new

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  error_message.md  feature_request.md  question.md  typo.md
.github/config/: changelog-builder-action.json
.github/workflows/: cd.yml  ci.yml
src/: attrs.rs  fields.rs  lib.rs  new_struct.rs  utils.rs
src/attrs/: impl_new_attr.rs  mod.rs
tests/: named_fields_test.rs  unnamed_fields_tests.rs
