[package]
name = "impl_new"
description = "A procedural macro to generate a new impl block for you"
authors = ["Awiteb <awiteb@hotmail.com>"]
license = "MIT"
repository = "https://github.com/theawiteb/impl_new"
documentation = "https://docs.rs/impl_new/latest/impl_new/"
readme = "README.md"
keywords = ["proc", "macro", "derive", "impl", "new"]
version = "0.1.1"
edition = "2021"
rust-version = "1.56.1"

[lib]
proc-macro = true

[dependencies]

syn = { version = "2.0.29", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
